tests/baselines/reference/parserStrictMode15.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15.ts (1 errors) ====
    "use strict";
    delete a;
           ~
!!! error TS2304: Cannot find name 'a'.